--- a/RxStudy/Base.lproj/Main.storyboard
+++ b/RxStudy/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="e1d-0g-QL0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lAW-3g-JJS">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -152,6 +152,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g0X-A7-u7U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1612" y="82"/>
+        </scene>
+        <!--List View Controller-->
+        <scene sceneID="CnI-Bc-CCY">
+            <objects>
+                <viewController storyboardIdentifier="ListViewController" id="lAW-3g-JJS" customClass="ListViewController" customModule="RxStudy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Bib-mK-TTx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="o1l-4D-VZs">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Z4S-y7-6PA" firstAttribute="trailing" secondItem="o1l-4D-VZs" secondAttribute="trailing" id="7E1-GT-OpJ"/>
+                            <constraint firstItem="o1l-4D-VZs" firstAttribute="top" secondItem="Z4S-y7-6PA" secondAttribute="top" id="Alt-3F-nyj"/>
+                            <constraint firstItem="Z4S-y7-6PA" firstAttribute="bottom" secondItem="o1l-4D-VZs" secondAttribute="bottom" id="f71-fB-fwR"/>
+                            <constraint firstItem="o1l-4D-VZs" firstAttribute="leading" secondItem="Z4S-y7-6PA" secondAttribute="leading" id="gvW-Hh-IMe"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Z4S-y7-6PA"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="o1l-4D-VZs" id="kOj-Dj-GUn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bhC-9V-4gd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2423" y="82"/>
         </scene>
     </scenes>
 </document>
